# Railway_tampering

./: .gitignore  README.md  api_server.py  hackathon-hack4delhi.ipynb  requirements.txt  test_db_connection.py  test_expert_modules.py  test_experts_standalone.py  test_full_system.py  test_gemini_key.py
backend/: dataset.py  main_pipeline.py  models.py  train_fault.py  train_obstacle.py  train_segmentation.py  visualize_data.py
experts/: Vibration.ipynb  __init__.py  combined_inference.py  contextual_reasoning_expert.py  orchestration.py  requirements.txt  scaler_metro.pkl  thermal_anomaly_expert.py  track_structural_expert.py  visual_integrity_expert.py  xgb_metro_model.pkl
experts/lidar/: README.md  main.py  pyproject.toml  tampering_detector.py
experts/tests/: __init__.py  test_experts.py  test_simple.py
frontend/: build_log.txt  chart_replacement.txt  package-lock.json  package.json  tailwind.config.ts
frontend/app/: actions.ts  globals.css  layout.tsx
frontend/app/dashboard/: layout.tsx
frontend/app/dashboard/analysis/: page.tsx
frontend/app/login/: page.tsx
frontend/components/layout/: DashboardGuard.tsx  Header.tsx  Sidebar.tsx
frontend/components/map/: MapComponent.tsx
frontend/components/modals/: DatasetModal.tsx
frontend/contexts/: AlertContext.tsx  AuthContext.tsx
frontend/hooks/: useTelemetry.ts
frontend/public/dataset/: data.json
frontend/services/: api.ts
frontend/types/: telemetry.ts
frontend/utils/: pdfGenerator.ts
lidar/: README.md  config.json  output_formatter.py  point_cloud_processor.py
outputs/: analysis.py
(+7 files in other folders)
