[project]
name = "railmonitor-lidar"
version = "0.1.0"
description = "Point cloud processing for railway track tampering detection"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "open3d>=0.18.0",
    "numpy>=1.24.0",
    "scipy>=1.11.0",
    "scikit-learn>=1.3.0",
    "requests>=2.31.0",
    "tqdm>=4.66.0",
]
